# Neural-Network

./: CMakeLists.txt  README.md  config.cmake
headers/: ActivationFunction.h  CostFunction.h  EigenStlConversions.h  KernelInitializer.h  Layer.h  NeuralNetwork.h  Optimizer.h  Test.h  csv.h
lib/: ActivationFunction.cxx  CostFunction.cxx  EigenStlConversions.cxx  KernelInitializer.cxx  Layer.cxx  NeuralNetwork.cxx  Optimizers.cxx  Test.cxx  csv.cxx
lib/layers/: dense.cxx  input.cxx  linear.cxx
